<resources>
    //Main Activity
    <string name="app_name">Overflow</string>
    <string name="add_items">Add Items</string>
    <string name="remove_items">Remove Items</string>
    <string name="access_inventory">Access Inventory</string>
    <string name="welcome">Welcome to Overflow!</string>

    //Multiple Pages
    <string name="to_home">Home</string>
    <string name="to_inventory">My Inventory</string>

    //Camera Page
    <string name="choose_photo">Choose Photo</string>
    <string name="see_items">See Items</string>
    <string name="content_description">Uploaded receipt photo</string>
    <string name="rotate_photo">Rotate Photo</string>

    //ListDisplay Page
    <string name="tap_to_edit">Tap below to edit your items. To specify
        breaks between items, hit enter and start a new line. </string>
    <string name="save_list">Save List</string>

    //CreateItem Page
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="create_item">Create</string>

    //Inventory Page
    <string name="sad_status">There are no items in your inventory :(</string>
    <string name="clear_all">Clear All</string>

    //ItemInfo Page
    <string name="quantity">Quantity:</string>
    <string name="item">Item:</string>
    <string name="instructions">Tap the fields to edit item information, or tap the buttons to increment/decrement
                                item quantity.</string>
    <string name="current_info">Current Item Information:</string>
    <string name="exit">Exit</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="delete_item">Delete Item</string>
    <string name="content_description2">Increment and decrement buttons</string>

</resources>
